# WeRecCover

./: CMakeLists.txt  LICENSE  README.md
cmake_modules/: FindGUROBI.cmake
src/: CGAL_classes.h  CMakeLists.txt  ILP_algorithm.cpp  ILP_algorithm.h  algorithm.h  algorithm_runner.cpp  algorithm_runner.h  baserect_graph.cpp  baserect_graph.h  bbox_cover_splitter.cpp  bbox_cover_splitter.h  cover_joiner.cpp  cover_joiner.h  cover_joiner_full.cpp  cover_joiner_full.h  cover_postprocessor.cpp  cover_postprocessor.h  cover_provider.h  cover_pruner.cpp  cover_pruner.h  cover_splitter.cpp  cover_splitter.h  cover_trimmer.cpp  cover_trimmer.h  datastructures.h  greedy_set_cover_algorithm.cpp  greedy_set_cover_algorithm.h  instance.cpp  instance.h  logging.h  main.cpp  partition_algorithm.cpp  partition_algorithm.h  partition_cover_splitter.cpp  partition_cover_splitter.h  rectangle.cpp  rectangle.h  rectangle_enumerator.cpp  rectangle_enumerator.h  result_writer.cpp  (+6 more)
